--- a/www/index.html
+++ b/www/index.html
@@ -4,40 +4,46 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
-<body bgcolor="#FFFFFF" text="#000000">
-<h1>Default project home page </h1>
-<p>Congratulations on your new java.net project! </p>
-<p>This page is the home page for your new project. If your project uses CVS, you can edit 
-  the information displayed on this page, by checking out your project's 
-  CVS repository and editing the index.html file in directory www. To get more information 
-  on how to set-up your local CVS client, click on <b>CVS</b> link on the 
-  left nav bar. If you don't want to use CVS to manage your home page, click on the <b>Edit 
-  project</b> link on this page and and choose the <b>Description</b> option. 
-  Your project home page contents will be generated from the <b>Description</b> field. Edit the text on that field to change your home page 
-  contents. Click on <b>Submit changes</b> to save your edits. </p>
-<p> If your project uses Subversion, you can click on the 'Edit' link at the bottom of your page and edit it using the WYSIWYG editor.</p>
-<p>If you are looking for <a href="https://java-net.dev.java.net/ProjectPages.html#templates">sample 
-  home page templates</a>, check out the <a href="https://java-net.dev.java.net/ProjectPages.html">java.net 
-  Project Starter Kit</a>. Copy either of the templates into your project's html 
-  to get started on your project's home page. </p>
-<p>You can find lots of helpful information in the Starter Kit to get your project 
-  started. Some of the things you will find in there include:</p>
-<ul>
-  <li>Hints on how to <a href="https://java-net.dev.java.net/ProjectPages.html#pages">set-up 
-    your project's</a> home page</li>
-  <li>Ideas on how to <a href="https://java-net.dev.java.net/ProjectPages.html#publicity">publicize 
-    your project</a> including RSS feeds</li>
-  <li>Hints on <a href="https://java-net.dev.java.net/pagedesign.html">project 
-    page HTML</a></li>
-  <li>Setting up project <a href="https://java-net.dev.java.net/ProjectPages.html#wiki">wiki 
-    pages</a></li>
-  <li>And places to go if <a href="https://java-net.dev.java.net/ProjectPages.html#feedback">you 
-    have questions</a>.</li>
-</ul>
-<p>Remember that you will attract more new members and your project team will 
-  work more effectively if you, as the project owner, supply sufficient information 
-  about your project for visitors to your project space. Good luck with your new 
-  project! </p>
+<meta name="keywords" content="Collaborative Environments, CSCW, virtual environment, Sun Labs, MPK20, Nicole Yankelovich" />
+<meta name="description" content="Voice Bridge home page" />
+
+<title>Sun Labs Voice Bridge</title>
+</head>
+
+<body>
+
+<div style="float: right; margin-bottom: 1em; margin-left: 1em;">
+<a href="http://research.sun.com/projects/mc/images/voice-bridge-poster.pdf"><img style="border: 1px solid black;" src="http://research.sun.com/projects/mc/images/voice-bridge-poster-sm.png" /></a>
+</div> <! end of img-para >
+
+
+<h1>
+Sun<sup>TM</sup> Labs Voice Bridge
+</h1>
+
+<p>The Voice Bridge is software written in the Java<sup style="font-size: 50%;">TM</sup> Programming Language that handles Voice over IP (VoIP) audio communication and mixing for tasks such as conference calls, voice chat, speech detection, and audio for 3D virtual environments. The Voice Bridge supports a range of voice qualities from telephone to CD-quality. In addition, the Voice Bridge supports stereo audio and the ability for each individual connected to the Bridge to have their own private voice mix. Click on the image below to see a larger image of a poster about the Voice Bridge. </p>
+
+<h2 style="clear: left;">Highlights</h2>
+
+<p>The Voice Bridge is versatile software that can be used in multiple contexts.</p>
+
+<h3 style="clear: left;">Audio for 3D Virtual Environments</h3>
+
+<p>The Voice Bridge enhances 3D virtual environments such as <a href="http://research.sun.com/projects/mc/mpk20.html">MPK20: Sun's Virtual Workplace</a> by providing individually adjustable audio channels for each live avatar and each in-world recorded sound source. Virtual world inhabitants experience life-like high-fidelity, stereo audio as they navigate through the environment.</p>
+
+<h3 style="clear: left;">Conference Calling</h3>
+
+<p>The Voice Bridge is a scalable, SIP-based platform for setting up and managing conference calls. Calls can either be entirely VoIP or combined with calls routed through a PBX.  The Voice Bridge manages conferences, allowing members to join or leave the conference. It is responsible for receiving and mixing speech and sending the mix out to each member of the conference. Speech detection is done by the Voice Bridge so individual speakers can be identified easily. Additionally, each caller can have his or her private mix of the conference. This supports a variety of features ranging from individual volume control to multiple, private voice chats within a single conference. The Voice Bridge has been in use internally at Sun since 2004 for conference calling as part of the <a href="http://research.sun.com/projects/mc/meeting-suite.html">Sun<sup>TM</sup> Labs Meeting Suite</a> prototype software.</p>
+
+<h3>Integration with Enterprise Applications</h3>
+
+<p>The Voice Bridge can be used as a component to support telephony and audio features within enterprise applications. For example, the Voice Bridge can be used to add click calling to corporate directories or other web pages. It is also ideally suited to "web 2.0" style conference calling applications.</p>
+
+<h3>High-Fidelity, Stereo Audio</h3>
+
+<p>As part of the team's research effort, we are studying the benefits of high-fidelity, stereo audio. Audio samples and a paper describing an assessment of performance under different audio conditions can be found on our <a href="http://research.sun.com/projects/mc/audio/">Audio Assessment</a> page. </p>
+
+<hr>
+<p>For more information see the <a href="http://research.sun.com/projects/dashboard.php?id=85">Collaborative Environments</a> home page or contact <a href="http://research.sun.com/people/mybio.php?uid=38272">Jonathan Kaplan</a>.</p>
 </body>
 </html>
-
