Update home page
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@10 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
-<meta name="keywords" content="Collaborative Environments, CSCW, virtual environment, Sun Labs, MPK20, Nicole Yankelovich" />
-<meta name="description" content="Voice Bridge home page" />
+<meta name="keywords" content="Collaborative Environments, CSCW, virtual environment, Sun Labs, MPK20" />
+<meta name="description" content="jVoiceBridge home page" />
 
-<title>Sun Labs Voice Bridge</title>
+<title>jVoiceBridge</title>
 </head>
 
 <body>
@@ -18,26 +18,26 @@
 
 
 <h1>
-Sun<sup>TM</sup> Labs Voice Bridge
+jVoiceBridge
 </h1>
 
-<p>The Voice Bridge is software written in the Java<sup style="font-size: 50%;">TM</sup> Programming Language that handles Voice over IP (VoIP) audio communication and mixing for tasks such as conference calls, voice chat, speech detection, and audio for 3D virtual environments. The Voice Bridge supports a range of voice qualities from telephone to CD-quality. In addition, the Voice Bridge supports stereo audio and the ability for each individual connected to the Bridge to have their own private voice mix. Click on the image below to see a larger image of a poster about the Voice Bridge. </p>
+<p>The voice bridge is software written in the Java<sup style="font-size: 50%;">TM</sup> Programming Language that handles Voice over IP (VoIP) audio communication and mixing for tasks such as conference calls, voice chat, speech detection, and audio for 3D virtual environments. The voice bridge supports a range of voice qualities from telephone to CD-quality. In addition, the voice bridge supports stereo audio and the ability for each individual connected to the Bridge to have their own private voice mix. Click on the image below to see a larger image of a poster about the voice bridge. </p>
 
 <h2 style="clear: left;">Highlights</h2>
 
-<p>The Voice Bridge is versatile software that can be used in multiple contexts.</p>
+<p>The voice bridge is versatile software that can be used in multiple contexts.</p>
 
 <h3 style="clear: left;">Audio for 3D Virtual Environments</h3>
 
-<p>The Voice Bridge enhances 3D virtual environments such as <a href="http://research.sun.com/projects/mc/mpk20.html">MPK20: Sun's Virtual Workplace</a> by providing individually adjustable audio channels for each live avatar and each in-world recorded sound source. Virtual world inhabitants experience life-like high-fidelity, stereo audio as they navigate through the environment.</p>
+<p>The voice bridge enhances 3D virtual environments such as <a href="http://research.sun.com/projects/mc/mpk20.html">MPK20: Sun's Virtual Workplace</a> by providing individually adjustable audio channels for each live avatar and each in-world recorded sound source. Virtual world inhabitants experience life-like high-fidelity, stereo audio as they navigate through the environment.</p>
 
 <h3 style="clear: left;">Conference Calling</h3>
 
-<p>The Voice Bridge is a scalable, SIP-based platform for setting up and managing conference calls. Calls can either be entirely VoIP or combined with calls routed through a PBX.  The Voice Bridge manages conferences, allowing members to join or leave the conference. It is responsible for receiving and mixing speech and sending the mix out to each member of the conference. Speech detection is done by the Voice Bridge so individual speakers can be identified easily. Additionally, each caller can have his or her private mix of the conference. This supports a variety of features ranging from individual volume control to multiple, private voice chats within a single conference. The Voice Bridge has been in use internally at Sun since 2004 for conference calling as part of the <a href="http://research.sun.com/projects/mc/meeting-suite.html">Sun<sup>TM</sup> Labs Meeting Suite</a> prototype software.</p>
+<p>The voice bridge is a scalable, SIP-based platform for setting up and managing conference calls. Calls can either be entirely VoIP or combined with calls routed through a PBX.  The voice bridge manages conferences, allowing members to join or leave the conference. It is responsible for receiving and mixing speech and sending the mix out to each member of the conference. Speech detection is done by the voice bridge so individual speakers can be identified easily. Additionally, each caller can have his or her private mix of the conference. This supports a variety of features ranging from individual volume control to multiple, private voice chats within a single conference. The voice bridge has been in use internally at Sun since 2004 for conference calling as part of the <a href="http://research.sun.com/projects/mc/meeting-suite.html">Sun<sup>TM</sup> Labs Meeting Suite</a> prototype software.</p>
 
 <h3>Integration with Enterprise Applications</h3>
 
-<p>The Voice Bridge can be used as a component to support telephony and audio features within enterprise applications. For example, the Voice Bridge can be used to add click calling to corporate directories or other web pages. It is also ideally suited to "web 2.0" style conference calling applications.</p>
+<p>The voice bridge can be used as a component to support telephony and audio features within enterprise applications. For example, the voice bridge can be used to add click calling to corporate directories or other web pages. It is also ideally suited to "web 2.0" style conference calling applications.</p>
 
 <h3>High-Fidelity, Stereo Audio</h3>
 
