Update home page
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@13 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,15 @@ jVoiceBridge
 
 <p>As part of the team's research effort, we are studying the benefits of high-fidelity, stereo audio. Audio samples and a paper describing an assessment of performance under different audio conditions can be found on our <a href="http://research.sun.com/projects/mc/audio/">Audio Assessment</a> page. </p>
 
+<h3>Get jVoiceBridge</h3>
+
+<p>You can download the jVoiceBridge software from our <a href="servlets/ProjectDocumentList">documents and files</a> section today.  The voice bridge is currently distributed in two forms: 
+<ul>
+    <li>jVoiceBridge.zip contains complete version of both the voice bridge and software phone for standalone use</li>
+    <li>WonderlandAudio.zip contains the voice bridge and softphone packaged for the <a href="http://lg3d-wonderland.dev.java.net">Project Wonderland</a> environment.
+</ul>
+</p>
+
 <hr>
 <p>For more information see the <a href="http://research.sun.com/projects/dashboard.php?id=85">Collaborative Environments</a> home page or contact <a href="http://research.sun.com/people/mybio.php?uid=38272">Jonathan Kaplan</a>.</p>
 </body>
