New index.html and contributor agreement
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@113 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/www/index.html
+++ b/www/index.html
@@ -12,45 +12,77 @@
 
 <body>
 
-<div style="float: right; margin-bottom: 1em; margin-left: 1em;">
-<a href="http://research.sun.com/projects/mc/images/voice-bridge-poster.pdf"><img style="border: 1px solid black;" src="http://research.sun.com/projects/mc/images/voice-bridge-poster-sm.png" /></a>
-</div> <! end of img-para >
-
-
 <h1>
-jVoiceBridge
+jVoiceBridge<br>
+<font size="2">Experimental Technology sponsored by this community and Sun Microsystems Laboratories</font>
 </h1>
 
-<p>The voice bridge is software written in the Java<sup style="font-size: 50%;">TM</sup> Programming Language that handles Voice over IP (VoIP) audio communication and mixing for tasks such as conference calls, voice chat, speech detection, and audio for 3D virtual environments. The voice bridge supports a range of voice qualities from telephone to CD-quality. In addition, the voice bridge supports stereo audio and the ability for each individual connected to the Bridge to have their own private voice mix. Click on the image below to see a larger image of a poster about the voice bridge. </p>
+<p>jVoiceBridge is a software-only audio mixer written in the Java<sup style="font-size: 50%;">TM</sup> Programming Language that handles Voice over IP (VoIP) audio communication and mixing for tasks such as conference calls, voice chat, speech detection, and audio for 3D virtual environments. jVoiceBridge supports a range of voice qualities from telephone to CD-quality. In addition, it supports stereo audio and the ability for each individual connected to the bridge to have their own private voice mix. </p>
 
-<h2 style="clear: left;">Highlights</h2>
 
-<p>The voice bridge is versatile software that can be used in multiple contexts.</p>
+<a name="toc">
+<h2>On this Site</h2></a>
 
+<table border="0" width="100%">
+
+<tr  bgcolor="#CCCCFF">
+    <th align="left">About jVoiceBridge</th>
+    <th align="left">For Developers</th>
+</tr>
+<tr>
+    <td><a href="#uses">Uses of jVoiceBridge</a></td>
+    <td><a href="contribute.html">Getting involved</a></td>
+    <td></td>
+</tr>
+<tr>
+    <td><a href="#hifi">High-fidelity stereo audio</a></td>
+    <td><a href="http://wiki.java.net/bin/view/Communications/jVoiceBridge">Developer documentation Wiki</a></td>
+</tr>
+<tr>
+    <td><br></td>
+    <td><a href="#get">Download jVoiceBridge</a></td>
+</tr>
+</table>
+
+<div style="float: right; margin-bottom: 1em; margin-top: 2em; margin-left: 1em;">
+<a href="voice-bridge-samples.png"><img style="border: 0px solid black;" src="voice-bridge-samples.png" /></a>
+</div> <! end of img-para >
+
+<a name="uses">
+<h2 style="clear: left;">Uses of jVoiceBridge</h2></a>
+
+<p>jVoiceBridge is versatile software that can be used in multiple contexts.</p>
+
+<ul>
 <h3 style="clear: left;">Audio for 3D Virtual Environments</h3>
 
-<p>The voice bridge enhances 3D virtual environments such as <a href="http://research.sun.com/projects/mc/mpk20.html">MPK20: Sun's Virtual Workplace</a> by providing individually adjustable audio channels for each live avatar and each in-world recorded sound source. Virtual world inhabitants experience life-like high-fidelity, stereo audio as they navigate through the environment.</p>
+<p>jVoiceBridge enhances 3D virtual environments such as <a href="http://wonderland.dev.java.net">Project Wonderland</a> by providing individually adjustable audio channels for each live avatar and each in-world recorded sound source. Virtual world inhabitants experience life-like high-fidelity, stereo audio as they navigate through the environment. In addition, jVoiceBridge provides the ability to add telephone support to virtual environments, mixing telephone audio with immersive in-world audio and providing a connection to a PBX or external telephone network through standard SIP communication channels.</p>
 
 <h3 style="clear: left;">Conference Calling</h3>
 
-<p>The voice bridge is a scalable, SIP-based platform for setting up and managing conference calls. Calls can either be entirely VoIP or combined with calls routed through a PBX.  The voice bridge manages conferences, allowing members to join or leave the conference. It is responsible for receiving and mixing speech and sending the mix out to each member of the conference. Speech detection is done by the voice bridge so individual speakers can be identified easily. Additionally, each caller can have his or her private mix of the conference. This supports a variety of features ranging from individual volume control to multiple, private voice chats within a single conference. The voice bridge has been in use internally at Sun since 2004 for conference calling as part of the <a href="http://research.sun.com/projects/mc/meeting-suite.html">Sun<sup>TM</sup> Labs Meeting Suite</a> prototype software.</p>
+<p>jVoiceBridge is a scalable, SIP-based platform for setting up and managing conference calls. Calls can either be entirely VoIP or combined with calls routed through a PBX.  The voice bridge manages conferences, allowing members to join or leave the conference. It is responsible for receiving and mixing speech and sending the mix out to each member of the conference. Speech detection is done by the voice bridge so individual speakers can be identified easily. Additionally, each caller can have his or her private mix of the conference. This supports a variety of features ranging from individual volume control to multiple, private voice chats within a single conference. jVoiceBridge has been in use internally at Sun since 2004 for conference calling as part of the <a href="http://research.sun.com/projects/mc/meeting-suite.html">Sun<sup>TM</sup> Labs Meeting Suite</a> prototype software.</p>
 
 <h3>Integration with Enterprise Applications</h3>
 
-<p>The voice bridge can be used as a component to support telephony and audio features within enterprise applications. For example, the voice bridge can be used to add click calling to corporate directories or other web pages. It is also ideally suited to "web 2.0" style conference calling applications.</p>
+<p>jVoiceBridge can be used as a component to support telephony and audio features within enterprise applications. For example, jVoiceBridge can be used to add click calling to corporate directories or other web pages. It is also ideally suited to "web 2.0" style conference calling applications, such as the <a href="http://research.sun.com/projects/mc/confmgr.html">Sun<sup>TM</sup> Labs Conference Manager.</a></p>
 
-<h3>High-Fidelity, Stereo Audio</h3>
+</ul>
 
-<p>As part of the team's research effort, we are studying the benefits of high-fidelity, stereo audio. Audio samples and a paper describing an assessment of performance under different audio conditions can be found on our <a href="http://research.sun.com/projects/mc/audio/">Audio Assessment</a> page. </p>
+<a name="hifi">
+<h2>High-Fidelity, Stereo Audio</h2></a>
 
-<h3>Get jVoiceBridge</h3>
+<p>An important aspect of jVoiceBridge is the support for both stereo audio and a range of high-fidelity options. As part of the Sun Lab team's research effort, we conducted a study to better understand the benefits of high-fidelity, stereo audio. Our findings indicate that high-fidelity audio is beneficial for understanding heavily accented speech and that the combination of stereo and high-fidelity help listeners to separate voices from background noise and more easily detect speaker changes. Audio samples and a paper describing the assessment of performance under different audio conditions can be found on our <a href="http://research.sun.com/projects/mc/audio/">Audio Assessment</a> page. </p>
 
-<p>You can download the jVoiceBridge software from our <a href="servlets/ProjectDocumentList">documents and files</a> section today.  The voice bridge is currently distributed in two forms: 
+<a name="get">
+<h2>Download jVoiceBridge</h2></a>
+
+<p>You can download the jVoiceBridge software from our <a href="servlets/ProjectDocumentList">documents and files</a> section.  The software is currently distributed in two forms: 
 <ul>
-    <li>jVoiceBridge.zip contains complete version of both the voice bridge and software phone for standalone use</li>
-    <li>WonderlandAudio.zip contains the voice bridge and softphone packaged for the <a href="http://lg3d-wonderland.dev.java.net">Project Wonderland</a> environment.
+    <li><code>jVoiceBridge.zip</code> contains a complete version of both the voice bridge and software phone for standalone use</li>
+    <li><code>WonderlandAudio.zip</code> contains the voice bridge and softphone packaged for the <a href="http://lg3d-wonderland.dev.java.net">Project Wonderland</a> environment.
 </ul>
 </p>
+
 
 <hr>
 <p>For more information see the <a href="http://research.sun.com/projects/dashboard.php?id=85">Collaborative Environments</a> home page or contact <a href="http://research.sun.com/people/mybio.php?uid=38272">Jonathan Kaplan</a>.</p>
