formatting changes to fix image problem
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@115 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@ jVoiceBridge<br>
 </tr>
 </table>
 
-<div style="float: right; margin-bottom: 1em; margin-top: 2em; margin-left: 1em;">
+<div style="float: right; margin-bottom: 2em; margin-top: 2em; margin-left: 1em;">
 <a href="voice-bridge-samples.png"><img style="border: 0px solid black;" src="voice-bridge-samples.png" /></a>
 </div> <! end of img-para >
 
@@ -54,15 +54,15 @@ jVoiceBridge<br>
 <p>jVoiceBridge is versatile software that can be used in multiple contexts.</p>
 
 <ul>
-<h3 style="clear: left;">Audio for 3D Virtual Environments</h3>
+<b>Audio for 3D Virtual Environments</b>
 
 <p>jVoiceBridge enhances 3D virtual environments such as <a href="http://wonderland.dev.java.net">Project Wonderland</a> by providing individually adjustable audio channels for each live avatar and each in-world recorded sound source. Virtual world inhabitants experience life-like high-fidelity, stereo audio as they navigate through the environment. In addition, jVoiceBridge provides the ability to add telephone support to virtual environments, mixing telephone audio with immersive in-world audio and providing a connection to a PBX or external telephone network through standard SIP communication channels.</p>
 
-<h3 style="clear: left;">Conference Calling</h3>
+<b>Conference Calling</b>
 
 <p>jVoiceBridge is a scalable, SIP-based platform for setting up and managing conference calls. Calls can either be entirely VoIP or combined with calls routed through a PBX.  The voice bridge manages conferences, allowing members to join or leave the conference. It is responsible for receiving and mixing speech and sending the mix out to each member of the conference. Speech detection is done by the voice bridge so individual speakers can be identified easily. Additionally, each caller can have his or her private mix of the conference. This supports a variety of features ranging from individual volume control to multiple, private voice chats within a single conference. jVoiceBridge has been in use internally at Sun since 2004 for conference calling as part of the <a href="http://research.sun.com/projects/mc/meeting-suite.html">Sun<sup>TM</sup> Labs Meeting Suite</a> prototype software.</p>
 
-<h3>Integration with Enterprise Applications</h3>
+<b>Integration with Enterprise Applications</b>
 
 <p>jVoiceBridge can be used as a component to support telephony and audio features within enterprise applications. For example, jVoiceBridge can be used to add click calling to corporate directories or other web pages. It is also ideally suited to "web 2.0" style conference calling applications, such as the <a href="http://research.sun.com/projects/mc/confmgr.html">Sun<sup>TM</sup> Labs Conference Manager.</a></p>
 
